# django-stats-middleware

./: LICENSE.md  README.md  build  install  publish  setup.cfg  test-install  test-publish
src/django_stats_middleware/: __init__.py  apps.py
src/django_stats_middleware.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/django_stats_middleware/static/django-stats-middleware/css/: default.css
