[metadata]
name = django_stats_middleware
version = 0.1
author = Bernd Wechner
author_email = bwechner@yahoo.com
description = Django Middleware for reporting very simple lightweight timing stats at end of ever page.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bernd-wechner/django-stats-middleware
project_urls =
    Bug Tracker = https://github.com/bernd-wechner/django-stats-middleware/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Freely Distributable
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Framework :: Django :: 3.2
    Intended Audience :: System Administrators
    Topic :: Internet :: WWW/HTTP :: HTTP Servers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
